# sneakers-archive

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  main.py  pyproject.toml  requirements.txt
sneakers/: constants.py  exceptions.py  helpers.py  scrapers.py
tests/: mocks.py  test_sneakers.py
