[tool.poetry]
name = "sneakers-archive"
version = "0.1.0"
description = "Sneakers Archive"
authors = ["rsolanoweb <rubensoljim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
dateutils = "^0.6.12"
enquiries = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b2"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
